Bugfix: Error while loading .tiktoken files